refactor: 重构大部分时间相关记录，使用 Instant 而不是 long 形式